index page now show thumbnails of the presentations

--- a/src/main/webapp/theme/css/index.css
+++ b/src/main/webapp/theme/css/index.css
@@ -21,45 +21,40 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -68,28 +63,17 @@ h2 {
   font-size: 4em;
 }
 
-article {
-  padding:20px;
-}  
-
-article table {
-
+h3 {
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
-
-article tr {
-  border-bottom:1px solid gray;
+.container {
+  width:100%;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
 }
-article th {
-  border-bottom:2px solid black;
-  border-top:2px solid black;
-  padding:3px;
-  font-weight:bold;
-}
-
-article td {
-  padding:3px;
-  border-left:1px solid gray;
-  border-right:1px solid gray;
-
+.container div {
+  float:left;
+  margin: 10px 10px 10px 10px;
 }
